// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreatePipelineForm Rendering should closeModal when click Setup Later 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <p
          class="StyledProps--font StyledProps--main"
          style="color: black; padding-bottom: 8px; font-weight: 600; font-size: large;"
        >
          pipeline.createPipeline.setupHeader
        </p>
        <p
          class="StyledProps--font StyledProps--main"
          style="color: black; padding-bottom: 40px;"
        >
          pipeline.createPipeline.setupSubtitle
        </p>
        <div
          class="StyledProps--font StyledProps--main main"
        >
          <div
            class="InputWithIdentifier--txtNameContainer TextInput--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
            >
              <p
                class="StyledProps--font StyledProps--main"
              >
                ID
                :
              </p>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                    tabindex="0"
                  >
                    <span
                      class="bp3-editable-text-content"
                      style="height: 1px; line-height: 1px; min-width: 0;"
                    />
                  </div>
                </span>
              </span>
              <span
                class="bp3-icon bp3-icon-edit StyledProps--main"
                icon="edit"
                style="vertical-align: middle; cursor: pointer;"
              >
                <svg
                  data-icon="edit"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    edit
                  </desc>
                  <path
                    d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="bp3-form-group"
              data-id="name-0"
            >
              <label
                class="bp3-label"
                for="name"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="createPipeline_name"
                >
                  name
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="name"
                    placeholder="common.namePlaceholder"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <label
              class="Label--main"
              style="font-size: 13px; font-weight: normal;"
            >
              optionalField
              <span
                class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                data-name="edit"
                data-testid="description-edit"
                icon="edit"
              >
                <svg
                  data-icon="edit"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    edit
                  </desc>
                  <path
                    d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </label>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <label
              class="Label--main"
              style="font-size: 13px; font-weight: normal;"
            >
              optionalField
              <span
                class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                data-name="edit"
                data-testid="tags-edit"
                icon="edit"
              >
                <svg
                  data-icon="edit"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    edit
                  </desc>
                  <path
                    d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </label>
          </div>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--padding-top-large"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              start
            </span>
          </button>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
            type="reset"
          >
            <span
              class="bp3-button-text"
            >
              pipeline.createPipeline.setupLater
            </span>
          </button>
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--padding-top-large"
        >
          <a
            rel="noreferrer"
            target="_blank"
          >
            pipeline.createPipeline.learnMore
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`CreatePipelineForm Rendering should render CreatePipelineForm 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <p
          class="StyledProps--font StyledProps--main"
          style="color: black; padding-bottom: 8px; font-weight: 600; font-size: large;"
        >
          pipeline.createPipeline.setupHeader
        </p>
        <p
          class="StyledProps--font StyledProps--main"
          style="color: black; padding-bottom: 40px;"
        >
          pipeline.createPipeline.setupSubtitle
        </p>
        <div
          class="StyledProps--font StyledProps--main main"
        >
          <div
            class="InputWithIdentifier--txtNameContainer TextInput--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
            >
              <p
                class="StyledProps--font StyledProps--main"
              >
                ID
                :
              </p>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                    tabindex="0"
                  >
                    <span
                      class="bp3-editable-text-content"
                      style="height: 1px; line-height: 1px; min-width: 0;"
                    />
                  </div>
                </span>
              </span>
              <span
                class="bp3-icon bp3-icon-edit StyledProps--main"
                icon="edit"
                style="vertical-align: middle; cursor: pointer;"
              >
                <svg
                  data-icon="edit"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    edit
                  </desc>
                  <path
                    d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="bp3-form-group"
              data-id="name-0"
            >
              <label
                class="bp3-label"
                for="name"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="createPipeline_name"
                >
                  name
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="name"
                    placeholder="common.namePlaceholder"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <label
              class="Label--main"
              style="font-size: 13px; font-weight: normal;"
            >
              optionalField
              <span
                class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                data-name="edit"
                data-testid="description-edit"
                icon="edit"
              >
                <svg
                  data-icon="edit"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    edit
                  </desc>
                  <path
                    d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </label>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <label
              class="Label--main"
              style="font-size: 13px; font-weight: normal;"
            >
              optionalField
              <span
                class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                data-name="edit"
                data-testid="tags-edit"
                icon="edit"
              >
                <svg
                  data-icon="edit"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    edit
                  </desc>
                  <path
                    d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </label>
          </div>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--padding-top-large"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              start
            </span>
          </button>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
            type="reset"
          >
            <span
              class="bp3-button-text"
            >
              pipeline.createPipeline.setupLater
            </span>
          </button>
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--padding-top-large"
        >
          <a
            rel="noreferrer"
            target="_blank"
          >
            pipeline.createPipeline.learnMore
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`CreatePipelineForm Rendering should validate inputs 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <p
          class="StyledProps--font StyledProps--main"
          style="color: black; padding-bottom: 8px; font-weight: 600; font-size: large;"
        >
          pipeline.createPipeline.setupHeader
        </p>
        <p
          class="StyledProps--font StyledProps--main"
          style="color: black; padding-bottom: 40px;"
        >
          pipeline.createPipeline.setupSubtitle
        </p>
        <div
          class="StyledProps--font StyledProps--main main"
        >
          <div
            class="InputWithIdentifier--txtNameContainer TextInput--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
            >
              <p
                class="StyledProps--font StyledProps--main"
              >
                ID
                :
              </p>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                    tabindex="0"
                  >
                    <span
                      class="bp3-editable-text-content"
                      style="height: 1px; line-height: 1px; min-width: 0;"
                    />
                  </div>
                </span>
              </span>
              <span
                class="bp3-icon bp3-icon-edit StyledProps--main"
                icon="edit"
                style="vertical-align: middle; cursor: pointer;"
              >
                <svg
                  data-icon="edit"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    edit
                  </desc>
                  <path
                    d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="bp3-form-group bp3-intent-danger"
              data-id="name-0"
            >
              <label
                class="bp3-label"
                for="name"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="createPipeline_name"
                >
                  name
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group bp3-intent-danger"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="name"
                    placeholder="common.namePlaceholder"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="bp3-form-helper-text"
                >
                  <div
                    class="FormError--errorDiv"
                  >
                    <span
                      class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                      data-icon="circle-cross"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 13 13"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="FormError--error"
                    >
                      createPipeline.pipelineNameRequired
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <label
              class="Label--main"
              style="font-size: 13px; font-weight: normal;"
            >
              optionalField
              <span
                class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                data-name="edit"
                data-testid="description-edit"
                icon="edit"
              >
                <svg
                  data-icon="edit"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    edit
                  </desc>
                  <path
                    d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </label>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <label
              class="Label--main"
              style="font-size: 13px; font-weight: normal;"
            >
              optionalField
              <span
                class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                data-name="edit"
                data-testid="tags-edit"
                icon="edit"
              >
                <svg
                  data-icon="edit"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    edit
                  </desc>
                  <path
                    d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </label>
          </div>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--padding-top-large"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              start
            </span>
          </button>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
            type="reset"
          >
            <span
              class="bp3-button-text"
            >
              pipeline.createPipeline.setupLater
            </span>
          </button>
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--padding-top-large"
        >
          <a
            rel="noreferrer"
            target="_blank"
          >
            pipeline.createPipeline.learnMore
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
    </form>
  </div>
</div>
`;
